tests/__snapshots__/validation-if-target-not-valid-range-within-union-stderr.snap.txt
Error: The specified range '5.6 >5.8' is not valid.

A range must be specified using an operator and a minor version: '>=5.8'.
To set an upper bound, use the intersection of two ranges: '>=5.4 <5.6'.
Use the '||' operator to join ranges into a union: '>=5.4 <5.6 || 5.6.2 || >=5.8'.

  1 | // @tstyche if { target: ">=5.4 || 5.6 >5.8" }
    |                          ~~~~~~~~~~~~~~~~~~~
  2 | 
  3 |   import { expect, test } from "tstyche";
  4 | 

      at ./__typetests__/sample.tst.ts:1:26

